插件拆分，版本升级